unpackaged/main/default/objects/Account_Objective__c/Account_Objective__c.object-meta.xml
<CustomObject>
    <label>Account Objective</label>
    <nameField>
        <displayFormat>AO-{00000}</displayFormat>
        <label>Account Objective Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Objectives</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>