unpackaged/main/default/objects/Account_Objective__c/fields/Add_to_New_Account_Plan__c.field-meta.xml
<CustomField>
    <fullName>Add_to_New_Account_Plan__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box to be able to add this objective to a new account plan.  Once all objectives to be moved are checked, go to the Copy Objectives tab to add them.</inlineHelpText>
    <label>Add to New Account Plan</label>
    <type>Checkbox</type>
</CustomField>