unpackaged/main/default/objects/Account_Objective__c/fields/Details__c.field-meta.xml
<CustomField>
    <fullName>Details__c</fullName>
    <label>Details</label>
    <length>1000</length>
    <type>Html</type>
</CustomField>