unpackaged/main/default/objects/Account_Objective__c/fields/Legal_Finance__c.field-meta.xml
<CustomField>
    <fullName>Legal_Finance__c</fullName>
    <formula>IF(TEXT( Workstream1__c ) = &quot;Legal/Finance&quot;, 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Legal/Finance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>