unpackaged/main/default/objects/Account_Objective__c/fields/Manager_s_Email__c.field-meta.xml
<CustomField>
    <fullName>Manager_s_Email__c</fullName>
    <label>Manager&#39;s Email</label>
    <type>Email</type>
</CustomField>