unpackaged/main/default/objects/Account_Objective__c/fields/Manager_s_Email_FF__c.field-meta.xml
<CustomField>
    <fullName>Manager_s_Email_FF__c</fullName>
    <formula>Account_Plan__r.Account__r.Owner.Manager.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Manager&#39;s Email FF</label>
    <type>Text</type>
</CustomField>