unpackaged/main/default/objects/Account_Objective__c/fields/Marketing1__c.field-meta.xml
<CustomField>
    <fullName>Marketing1__c</fullName>
    <formula>IF(TEXT(Workstream1__c) = &quot;Marketing&quot;, 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Marketing</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>