unpackaged/main/default/objects/Account_Objective__c/fields/Merchant_Contact__c.field-meta.xml
<CustomField>
    <fullName>Merchant_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Merchant Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Account Objectives</relationshipLabel>
    <relationshipName>Account_Objectives</relationshipName>
    <type>Lookup</type>
</CustomField>