unpackaged/main/default/objects/Account_Objective__c/fields/Objective_Type__c.field-meta.xml
<CustomField>
    <fullName>Objective_Type__c</fullName>
    <label>Objective Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Finance/Legal</fullName>
            </value>
            <value>
                <fullName>Grow Revenue</fullName>
            </value>
            <value>
                <fullName>IT</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Relationship</fullName>
            </value>
            <value>
                <fullName>Retail Operations</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>