unpackaged/main/default/objects/Account_Objective__c/fields/Other__c.field-meta.xml
<CustomField>
    <fullName>Other__c</fullName>
    <formula>IF(TEXT(WorkStream__c) = &quot;Other&quot;, 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Other</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>