unpackaged/main/default/objects/Account_Objective__c/fields/Owner__c.field-meta.xml
<CustomField>
    <fullName>Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>This is the owner of the Account Objective.</inlineHelpText>
    <label>Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Account_Objectives</relationshipName>
    <type>Lookup</type>
</CustomField>