unpackaged/main/default/objects/Account_Objective__c/fields/Parent_Merchant_Account_Plan__c.field-meta.xml
<CustomField>
    <fullName>Parent_Merchant_Account_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Merchant Account Plan</label>
    <referenceTo>Merchant_Account_Plan__c</referenceTo>
    <relationshipLabel>Account Objectives (Parent Merchant Account Plan)</relationshipLabel>
    <relationshipName>Account_Objectives</relationshipName>
    <type>Lookup</type>
</CustomField>