unpackaged/main/default/objects/Account_Objective__c/fields/Past_Due__c.field-meta.xml
<CustomField>
    <fullName>Past_Due__c</fullName>
    <formula>IF(AND(OR(TEXT(Status__c) = &quot;Not Started&quot;, TEXT(Status__c) = &quot;In Progress&quot;),  Due_Date__c &lt; TODAY()), TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Past Due</label>
    <type>Checkbox</type>
</CustomField>