unpackaged/main/default/objects/Account_Objective__c/fields/Payments1__c.field-meta.xml
<CustomField>
    <fullName>Payments1__c</fullName>
    <formula>IF(TEXT(Workstream1__c) = &quot;Payments&quot;, 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payments</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>