unpackaged/main/default/objects/Account_Objective__c/fields/Planet_Function_Contact__c.field-meta.xml
<CustomField>
    <fullName>Planet_Function_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Planet Function Contact</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Account_Objectives1</relationshipName>
    <type>Lookup</type>
</CustomField>