unpackaged/main/default/objects/Account_Objective__c/fields/Planet_Intelligence__c.field-meta.xml
<CustomField>
    <fullName>Planet_Intelligence__c</fullName>
    <formula>IF(TEXT(WorkStream__c) = &quot;Planet Intelligence&quot;, 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Planet Intelligence</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>