unpackaged/main/default/objects/Account_Objective__c/fields/POS_Solution__c.field-meta.xml
<CustomField>
    <fullName>POS_Solution__c</fullName>
    <formula>IF(TEXT(WorkStream__c) = &quot;POS Solution&quot;, 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>POS Solution</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>