unpackaged/main/default/objects/Account_Objective__c/fields/POS_Solution_IT__c.field-meta.xml
<CustomField>
    <fullName>POS_Solution_IT__c</fullName>
    <formula>IF(TEXT(Workstream1__c) = &quot;POS Solution/IT&quot;, 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>POS Solution/IT</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>