unpackaged/main/default/objects/Account_Objective__c/fields/Reporting_and_Consultancy__c.field-meta.xml
<CustomField>
    <fullName>Reporting_and_Consultancy__c</fullName>
    <formula>IF(TEXT(Workstream1__c) = &quot;Reporting and Consultancy&quot;, 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reporting and Consultancy</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>