unpackaged/main/default/objects/Account_Objective__c/fields/Service_and_Logistics__c.field-meta.xml
<CustomField>
    <fullName>Service_and_Logistics__c</fullName>
    <formula>IF(TEXT(WorkStream__c) = &quot;Service and Logistics&quot;, 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service and Logistics</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>