unpackaged/main/default/objects/Account_Objective__c/fields/Statistical_Reporting__c.field-meta.xml
<CustomField>
    <fullName>Statistical_Reporting__c</fullName>
    <formula>IF(TEXT(WorkStream__c) = &quot;Statistical Reporting&quot;, 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Statistical Reporting</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>