unpackaged/main/default/objects/Account_Objective__c/fields/Strategic_Business_Development__c.field-meta.xml
<CustomField>
    <fullName>Strategic_Business_Development__c</fullName>
    <formula>IF(TEXT( Workstream1__c ) = &quot;Strategic Business Development&quot;, 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Strategic Business Development</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>