unpackaged/main/default/objects/Account_Objective__c/fields/Training_and_Consultancy__c.field-meta.xml
<CustomField>
    <fullName>Training_and_Consultancy__c</fullName>
    <formula>IF(TEXT(WorkStream__c) = &quot;Training and Consultancy&quot;, 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Training and Consultancy</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>