unpackaged/main/default/objects/Account_Objective__c/fields/Workstream_Type__c.field-meta.xml
<CustomField>
    <fullName>Workstream_Type__c</fullName>
    <inlineHelpText>Only use Default Value if creating directly from a SWOT.</inlineHelpText>
    <label>Workstream Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Workstream1__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Workstream_Type</valueSetName>
    </valueSet>
</CustomField>