unpackaged/main/default/objects/Account_Objective__c/recordTypes/Account_Objective.recordType-meta.xml
<RecordType>
    <fullName>Account_Objective</fullName>
    <active>true</active>
    <label>Account Objective</label>
</RecordType>