unpackaged/main/default/objects/Account_Objective__c/recordTypes/Account_Objective_New.recordType-meta.xml
<RecordType>
    <fullName>Account_Objective_New</fullName>
    <active>true</active>
    <label>Account Objective New</label>
</RecordType>