unpackaged/main/default/objects/Account_Objective__c/validationRules/Details_Must_be_Completed.validationRule-meta.xml
<ValidationRule>
    <fullName>Details_Must_be_Completed</fullName>
    <active>true</active>
    <errorConditionFormula>Details__c = &quot;&quot;</errorConditionFormula>
    <errorDisplayField>Details__c</errorDisplayField>
    <errorMessage>Please complete the details field.</errorMessage>
</ValidationRule>