unpackaged/main/default/objects/Account_Objective__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Account_Plan__c</columns>
    <columns>Account__c</columns>
    <columns>NAME</columns>
    <columns>Objective__c</columns>
    <columns>Objective_Type__c</columns>
    <columns>Status__c</columns>
    <columns>Owner__c</columns>
    <columns>Due_Date__c</columns>
    <columns>Past_Due__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>