unpackaged/main/default/objects/Account_Objective__c/listViews/My_Account_Objectives.listView-meta.xml
<ListView>
    <fullName>My_Account_Objectives</fullName>
    <columns>Account_Plan__c</columns>
    <columns>Account__c</columns>
    <columns>NAME</columns>
    <columns>Objective__c</columns>
    <columns>Objective_Type__c</columns>
    <columns>Status__c</columns>
    <columns>Owner__c</columns>
    <columns>Due_Date__c</columns>
    <columns>Past_Due__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Current_User__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>My Account Objectives</label>
</ListView>